fix layout issues - 01

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -4,6 +4,7 @@ nav {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	z-index: 1;
 }
 
 nav ul {
@@ -50,5 +51,5 @@ li.active a {
 }
 .total {
 	align-items: center;
-	justify-content: right;
+	justify-content: flex-end;
 }
